# pacMan

./: LICENSE  README.md
pacman/: CMakeLists.txt  Makefile  cmake_install.cmake  mingw-toolchain.cmake  sdl2-config.cmake
pacman/cmake-3.29.0/Source/: CMakeVersion.cmake
pacman/src/: fantomes.c  fantomes.h  firstLevel.c  firstLevel.h  framework.c  framework.h  main.c  main.h
